Updates helpfulLinks.txt and About Me page

--- a/website/index.html
+++ b/website/index.html
@@ -9,8 +9,7 @@
     <script src="sketch.js"></script>
 
     <div id = "buttons">
-      <!-- <input type = button onClick="parent.location='index.html'"
- value='About Me'>  -->
+      <!-- add grades page, resume page, and "time capsule" page -->
        <input type = "button" id = "aboutMe" onClick="parent.location='aboutMe.html'" value='About Me'>
        <input type = "button" id = "myWork" onClick="parent.location='aboutMe.html'" value='My Work'>
        <input type = "button" id = "myMusic" onClick="parent.location='aboutMe.html'" value='My Music'>
