Adds border animations, changes text shadow

--- a/website/aboutMe.html
+++ b/website/aboutMe.html
@@ -4,10 +4,10 @@
 
   </head>
   <body>
-    <img src="/assets/selfPortrait.jpg" id = "selfPortrait" alt="Self portrait">
+    <img src= "https://wsprung.github.io/whitneysArchive/website/assets/selfPortrait.jpg" id = "selfPortrait" alt="Self portrait">
     <p id = selfPortraitLabel><em>Senior Year Portrait</em></p>
     <div id = intro>
-      <h2 id = "headerIntro"> Hi, my name is Whitney Sprung. </h2>
+      <h2 id = "headerIntro"> Hi, my name is <span id = myName> Whitney Sprung. <span> </h2>
         <hr id = "hr1">
         <p id = p1>I am a senior in high school in Connecticut. I live with my two brothers, mom, dad, and dogs.<hr id = "hr2"> </p>
 
@@ -18,7 +18,7 @@
         family. My favorite places on earth are Casco, Maine and Providence, Rhode Island where my mom and grandparents grew
         up. I created this website as an archive of myself and as a way to learn more about me. I hope you enjoy!</p>
         <hr id = "hr3">
-    <img src="/assets/dogs.jpg" id = "dogs" alt="Self portrait">
+    <img src="https://wsprung.github.io/whitneysArchive/website/assets/dogs.jpg" id = "dogs" alt="My dogs">
     <p id = doggyP>These are my dogs Rusty and Ruggles! Rusty is a cockapoo, Ruggles is a
       "cockapoo"...which means he is more of a mutt. Rusty got his name due to his color, and my dad
       named him. Ruggles is named after the street my mom grew up on, and I named him. They are both around 10 years
@@ -26,7 +26,6 @@
     </p>
     </div>
     <div id = family>
-      <p>hi</p>
-      <hr id = "hr4">
+      <!-- <hr id = "hr4"> -->
     </div>
 </body></html>
