--- a/website/index.html
+++ b/website/index.html
@@ -40,6 +40,7 @@
               function moveIntoTextBox(element1, element2) {
                 document.getElementById('hiToUser').style.display = "inline";
                 document.getElementById('welcomeUser').style.display = "inline";
+                document.getElementById('buttons').style.visibility = "visible";
 
                 element1.style.top = "350px";
                 element1.style.left = "260px";
