Adjust aboutMe, adjust brothers photo size

--- a/website/aboutMe.html
+++ b/website/aboutMe.html
@@ -11,7 +11,7 @@
         <hr id = "hr1">
         <p id = p1>I am a senior in high school in Connecticut. I live with my two brothers, mom, dad, and dogs.<hr id = "hr2"> </p>
 
-        <p id = p2> I enjoy long a lot of things. I find beauty in nature, serenity in conversation, and focus in music.
+        <p id = p2> I enjoy a lot of things. I find beauty in nature, serenity in conversation, and focus in music.
         Sushi is my favorite food, but I have yet to master the art of rolling maki. I am better at cooking other foods,
         with my favorite being pulled pork. I have played piano for over a decade, and currently my favorite song to play
         is <strong>"Waltz in A Minor"</strong> by Frederic Chopin. I love to hang out with friends and enjoy time with
@@ -25,7 +25,19 @@
       old and I love them very much. However, Ruggles can be quite the menace.
     </p>
     </div>
-    <div id = family>
-      <!-- <hr id = "hr4"> -->
+  <div id = funFacts>
+    <hr id = "hr4">
+    <h2></h2>
+    <div id = "conciseDescript">
+      <h2 id = "conciseDescriptHeader">Five facts to get to know me better.</h2>
+      <h3 id = "facts">&emsp; <span id = "numbering">0</span> &ensp; Three words friends use to describe me: <em>Outgoing, Funny, Passionate</em><h3>
+      <h3 id = "facts">&emsp; <span id = "numbering">1</span> &ensp; My favorite coding language (slightly biased to the ones I have been exposed to): <em>Java</em></h3>
+      <h3 id = "facts">&emsp; <span id = "numbering">2</span> &ensp; Currently my favorite show is <em>Bojack Horseman</em></h3>
+      <h3 id = "facts">&emsp; <span id = "numbering">3</span> &ensp; My favorite sibling is <em>unfair... next question</em></h3>
+      <h3 id = "facts">&emsp; <span id = "numbering">4</span> &ensp; In my free time I like to... <em>bike, hike, code, spend time with family and friends, and have existential crises</em></h3>
     </div>
+  </div>
+  <div id = "morePics">
+    <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I">
+  </div>
 </body></html>
