--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -5,15 +5,21 @@
   </head>
   <body>
     <img src= "https://wsprung.github.io/whitneysArchive/website/assets/selfPortrait.jpg" id = "selfPortrait" alt="Self portrait">
-    <p id = selfPortraitLabel><em>Senior Year Portrait</em></p>
+    <p id = "selfPortraitLabel"><em>Senior Year Portrait</em></p>
     <div id = intro>
       <h2 id = "headerIntro"> Hi, my name is <span id = myName> Whitney Sprung. <span> </h2>
         <hr id = "hr1">
-        <p id = p1>I am a senior in high school in Connecticut. I live with my two brothers, mom, dad, and dogs.<hr id = "hr1"> </p>
+        <p id = p1>I am a senior at Greenwich Academy in Conneticut. I live with my two brothers, mom, dad, and dogs.<hr id = "hr1"> </p>
 
-        <p id = p2> I enjoy a lot of things. I find beauty in nature, serenity in conversation, and focus in music.
-        Sushi is my favorite food, but I have yet to master the art of rolling maki. I am better at cooking other foods,
-        with my favorite being pulled pork. I have played piano for over a decade, and currently my favorite song to play
+        <p id = p2> I was born in 2004 and have lived in Greenwich my entire life. I look forward to starting college and
+          the countless new experiences I will have in the next four years and beyond. I love to travel and meet new people, so nothing
+          is more exciting to me than the prospects of doing so in an academic context. I hope to study abroad to grow my language skills and cultural awareness. <br><br>
+
+          I also enjoy a lot of familiar things. I love to immerse myself in natures and conversations. I find peace in music. My favorite food is sushi, however,
+          I am not the best when it comes to rolling maki. I am better at cooking other foods, with my current favorite food to make being pulled pork. Academic topics
+          that captivate me include computer science, creative writing, 19th and 20th century European literature, calculus, and more.<br><br>
+
+          I have played piano for over a decade, and currently my favorite song to play
         is <strong>"Waltz in A Minor"</strong> by Frederic Chopin. I love to hang out with friends and enjoy time with
         family. My favorite places on earth are Casco, Maine and Providence, Rhode Island where my mom and grandparents grew
         up. I created this website as an archive of myself and as a way to learn more about me. I hope you enjoy!</p>
@@ -24,21 +30,24 @@
       named him. Ruggles is named after the street my mom grew up on, and I named him. They are both around 10 years
       old and I love them very much. However, Ruggles can be quite the menace.
     </p>
+    
     </div>
-  <div id = funFacts>
-    <hr id = "hr1">
-    <h2></h2>
-    <div id = "conciseDescript">
-      <h2 id = "conciseDescriptHeader">Five facts to get to know me better.</h2>
-      <h3 id = "facts">&emsp; <span id = "numbering">0</span> &ensp; Three words friends use to describe me: <em>Outgoing, Funny, Passionate</em><h3>
-      <h3 id = "facts">&emsp; <span id = "numbering">1</span> &ensp; My favorite coding language (slightly biased to the ones I have been exposed to): <em>Java</em></h3>
-      <h3 id = "facts">&emsp; <span id = "numbering">2</span> &ensp; Currently my favorite show is <em>Bojack Horseman</em></h3>
-      <h3 id = "facts">&emsp; <span id = "numbering">3</span> &ensp; My favorite sibling is <em>unfair... next question</em></h3>
-      <h3 id = "facts">&emsp; <span id = "numbering">4</span> &ensp; In my free time I like to... <em>bike, hike, code, spend time with family and friends, and have existential crises</em></h3>
+    <div id = funFacts>
+      <hr id = "hr1">
+      <h2></h2>
+      <div id = "conciseDescript">
+        <h2 id = "conciseDescriptHeader">Five facts to get to know me better.</h2>
+        <h3 id = "facts">&emsp; <span id = "numbering">0</span> &ensp; Three words friends use to describe me: <em>Outgoing, Funny, Passionate</em><h3>
+        <h3 id = "facts">&emsp; <span id = "numbering">1</span> &ensp; My favorite coding language (slightly biased to the ones I have been exposed to): <em>Java</em></h3>
+        <h3 id = "facts">&emsp; <span id = "numbering">2</span> &ensp; Currently my favorite show is <em>Bojack Horseman</em></h3>
+        <h3 id = "facts">&emsp; <span id = "numbering">3</span> &ensp; My favorite book <em>Circe by Madeline Miller</em></h3>
+        <h3 id = "facts">&emsp; <span id = "numbering">4</span> &ensp; In my free time I like to... <em>bike, hike, code, spend time with family and friends, and have existential crises</em></h3>
+      </div>
+      <hr id = "hr1">
+      <div id = "morePics">
+        <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I">
+        <p id = "broDescript"><em>My twin older brothers and I. They are 20 years old</em></p>
+        <img src="https://wsprung.github.io/whitneysArchive/website/assets/parents_photo.JPG" id = "parents" alt="My parents and I">
+      </div>
     </div>
-    <hr id = "hr1">
-  </div>
-  <div id = "morePics">
-    <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I">
-  </div>
 </body></html>
