Adds stuffed animal photo

--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -45,9 +45,16 @@
         <h3 id = "facts">&emsp; <span id = "numbering">0</span> &ensp; Three words friends use to describe me: <em>Outgoing, Funny, Passionate</em><h3>
         <h3 id = "facts">&emsp; <span id = "numbering">1</span> &ensp; My favorite coding language (slightly biased to the ones I have been exposed to): <em>Java</em></h3>
         <h3 id = "facts">&emsp; <span id = "numbering">2</span> &ensp; Currently my favorite show is <em>Bojack Horseman</em></h3>
-        <h3 id = "facts">&emsp; <span id = "numbering">3</span> &ensp; My favorite book <em>Circe by Madeline Miller</em></h3>
-        <h3 id = "facts">&emsp; <span id = "numbering">4</span> &ensp; In my free time I like to... <em>bike, hike, code, spend time with family and friends, and have existential crises</em></h3>
+        <h3 id = "facts">&emsp; <span id = "numbering">3</span> &ensp; Currently my favorite book is <em>Circe by Madeline Miller</em></h3>
+        <h3 id = "facts">&emsp; <span id = "numbering">4</span> &ensp; In my free time I like to... <em>bike, hike, code, spend time with family and friends, cook, and have existential crises</em></h3>
       </div>
       <hr id = "hr1">
+    </div>
+
+    <div id = "morePics">
+      <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I">
+      <img src="https://wsprung.github.io/whitneysArchive/website/assets/parents_photo.JPG" id = "parents" alt="My parents and I">
+      <p id = "broDescript"><em>My twin older brothers and I. They are 20 years old</em></p>
+
     </div>
 </body></html>
