--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -51,10 +51,22 @@
       <hr id = "hr1">
     </div>
 
+    <h3 id = "slideshowHeader">Click to see some more photos of me.</h3>
+
+    <div id = "slideshowButtons">
+      <input type = "button" id = "nextPic" onClick = slideShow("forward") value = '⬅' >
+      <p id = "spaceButtons">.. </p>
+      <input type = "button" id = "nextPic" onClick = slideShow("backward") value = '⮕'
+      <br><br>
+    </div>
+
     <div id = "morePics">
+      <br>
       <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I">
       <img src="https://wsprung.github.io/whitneysArchive/website/assets/parents_photo.JPG" id = "parents" alt="My parents and I">
-      <p id = "broDescript"><em>My twin older brothers and I. They are 20 years old</em></p>
+      <img src="https://wsprung.github.io/whitneysArchive/website/assets/Whitney%20Room.jpg" id = "roomPic" alt="Childhood photo">
 
+      <p id = "imageDescript"><em>My twin older brothers and I. They are 20 years old</em></p>
     </div>
+
 </body></html>
