Adds room photo

--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -52,14 +52,13 @@
     </div>
 
     <h3 id = "slideshowHeader">Click to see some more photos of me.</h3>
-<div id = "fix">
     <div id = "slideshowButtons">
       <input type = "button" id = "nextPic" onClick = slideShow("forward") value = '⬅' >
       <p id = "spaceButtons">.. </p>
       <input type = "button" id = "nextPic" onClick = slideShow("backward") value = '⮕'
       <br><br>
     </div>
-</div>
+
     <div id = "morePics">
       <br><br><br>
       <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I">
@@ -67,6 +66,8 @@
       <img src="https://wsprung.github.io/whitneysArchive/website/assets/Whitney%20Room.png" id = "roomPic" alt="Childhood photo">
 
       <p id = "imageDescript"><em>My twin older brothers and I. They are 20 years old</em></p>
+      <br>
     </div>
 
+    <p id = "peruDescript"><em>{A photo I took in Peru in 2019}</em></p>
 </body></html>
