Adds back button to about me page

--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -5,6 +5,8 @@
   <body>
     <script src="sketch.js"></script>
     <div id = "seniorPortrait">
+      <input type = "button" id = "backButton" onClick="parent.location='../index.html'" value='Back'>
+
       <img src= "https://wsprung.github.io/whitneysArchive/website/assets/selfPortrait.jpg" id = "selfPortrait" alt="Self portrait">
       <p id = "selfPortraitLabel"><em>{Senior Year Portrait}</em></p>
       <p id = "chinaDescript"><em>{A photo I took in Hangzhou, China in 2019}</em></p>
@@ -63,7 +65,7 @@
       <br><br><br>
       <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I">
       <img src="https://wsprung.github.io/whitneysArchive/website/assets/parents_photo.JPG" id = "parents" alt="My parents and I">
-      <img src="https://wsprung.github.io/whitneysArchive/website/assets/Whitney%20Room.png" id = "roomPic" alt="Childhood photo">
+      <img src="https://wsprung.github.io/whitneysArchive/website/assets/Whitney%20Room.jpg" id = "roomPic" alt="Childhood photo">
 
       <p id = "imageDescript"><em>My twin older brothers and I. They are 20 years old</em></p>
       <br>
