Adds food photos to myFood page

--- a/website/myFood/index.html
+++ b/website/myFood/index.html
@@ -9,6 +9,9 @@
     <script src="sketch.js"></script>
 
   <div id="sketch-container">
+    <!-- <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I"> -->
+    <!-- https://wsprung.github.io/whitneysArchive/website/assets/christmasFood.JPEG -->
+    
   </div>
 
 </body></html>
