Adds contact info to aboutMe

--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -14,6 +14,13 @@
     <div id = intro>
       <h2 id = "headerIntro"> Hi, my name is <span id = myName> Whitney Sprung. <span> </h2>
         <hr id = "hr1">
+        <div id = "contactInfo">
+          <a href = "mailto: wsprung@greenwichacademy.org" id = "email">wsprung@greenwichacademy.org</a>
+          <br>
+          <hr id = "hr2">
+          <a href = "https://github.com/Wsprung" id = "git">My GitHub</a>
+        </div>
+        <hr id = "hr1">
         <p id = p1>I am a senior at Greenwich Academy in Conneticut. I live with my two brothers, mom, dad, and dogs.<hr id = "hr1"> </p>
 
         <p id = p2> I was born in 2004 and have lived in Greenwich my entire life. I look forward to starting college and
