--- a/website/myFood/index.html
+++ b/website/myFood/index.html
@@ -11,7 +11,8 @@
   <div id="sketch-container">
     <!-- <img src="https://wsprung.github.io/whitneysArchive/website/assets/brothersPhoto.JPG" id = "bros" alt="My brothers and I"> -->
     <!-- https://wsprung.github.io/whitneysArchive/website/assets/christmasFood.JPEG -->
-    
+    <p id = "paellaDescript">This is seafood paella. <br> While visiting my uncles in Hudson, I decided to make this dish for them.<br> I normally
+      do not love mollusks, I loved this dish. <br> Click to learn more about paella!</p>
   </div>
 
 </body></html>
