Adds myWork page

--- a/website/myWork/index.html
+++ b/website/myWork/index.html
@@ -1,12 +1,65 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en">
+
+  <head>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
   </head>
-  <body>
-    <script src="sketch.js"></script>
-  
 
-</body></html>
+<title>|~W. Sprung I~|</title>
+
+  <body>
+    <h1 id = "myName">Whitney Sprung </h1>
+    <p>
+       <a href="https://github.com/Wsprung/EDI" id = "repoLink">
+         Repository For My E&D I Projects
+      </a>
+    </p>
+    <script src="sketch.js"></script>
+    <table id = "table">
+  <!-- within these tags that we will add information for our table that will allow you to incorporate
+  your projects into your main page  -->
+      <tr> <!--table row -->
+        <td>
+          <a href="https://wsprung.github.io/EDI/PressFit/PressFitReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/BoxOutline.png">
+         </a>
+        </td> <!--table data -->
+        <td>
+          <a href="https://wsprung.github.io/EDI/Logo/LogoReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/TShirtOutline.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/EDI/SlotAnimal/SlotAnimalReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/SheepOutline.png">
+         </a>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <a href="https://wsprung.github.io/EDI/CreativeCoding/CreativeCodingReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/creativeCodingOutline-01.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/EDI/CreativeCoding/MachDraw/MachDrawReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/whitneySFish-01.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/EDI/BlinkyBadge/BlinkyBadgeReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/SprungblinkyBadge.png">
+         </a>
+        </td>
+      </tr>
+
+    </table>
+    <main>
+      <canvas id="defaultCanvas0" class="p5Canvas" width="885" height="1456" style="width: 885px; height: 1456px; position: absolute"></canvas>
+    </main>
+  </body>
+
+</html>
