Fixes back buttons on reflections

--- a/website/myWork/index.html
+++ b/website/myWork/index.html
@@ -10,29 +10,32 @@
 <title>|~W. Sprung I~|</title>
 
   <body>
-    <h1 id = "myName">Whitney Sprung </h1>
-    <p>
-       <a href="https://github.com/Wsprung/EDI" id = "repoLink">
-         Repository For My E&D I Projects
-      </a>
-    </p>
+    <div id = "intro">
+    <input type = "button" id = "backButton" onClick="parent.location='../index.html'" value='Back'>
+      <h1 id = "myName">Whitney Sprung </h1>
+      <p>
+        <a href="https://github.com/Wsprung/EDI" id = "repoLink">
+          Repository For My E&D I Projects
+        </a>
+      </p>
+  </div>
     <script src="sketch.js"></script>
     <table id = "table">
   <!-- within these tags that we will add information for our table that will allow you to incorporate
   your projects into your main page  -->
       <tr> <!--table row -->
         <td>
-          <a href="https://wsprung.github.io/EDI/PressFit/PressFitReflection.html">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html">
             <img src = "https://wsprung.github.io/EDI/assets/BoxOutline.png">
          </a>
         </td> <!--table data -->
         <td>
-          <a href="https://wsprung.github.io/EDI/Logo/LogoReflection.html">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html">
             <img src = "https://wsprung.github.io/EDI/assets/TShirtOutline.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/EDI/SlotAnimal/SlotAnimalReflection.html">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/SlotAnimalReflection.html">
             <img src = "https://wsprung.github.io/EDI/assets/SheepOutline.png">
          </a>
         </td>
@@ -40,17 +43,17 @@
 
       <tr>
         <td>
-          <a href="https://wsprung.github.io/EDI/CreativeCoding/CreativeCodingReflection.html">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/CreativeCodingReflection.html">
             <img src = "https://wsprung.github.io/EDI/assets/creativeCodingOutline-01.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/EDI/CreativeCoding/MachDraw/MachDrawReflection.html">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/MachDrawReflection.html">
             <img src = "https://wsprung.github.io/EDI/assets/whitneySFish-01.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/EDI/BlinkyBadge/BlinkyBadgeReflection.html">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/BlinkyBadgeReflection.html">
             <img src = "https://wsprung.github.io/EDI/assets/SprungblinkyBadge.png">
          </a>
         </td>
