Adds lunchMenuIcon and dataIcon

--- a/website/myWork/index.html
+++ b/website/myWork/index.html
@@ -59,6 +59,24 @@
         </td>
       </tr>
 
+      <!-- <tr>
+        <td>
+          <a href="https://github.com/tolympia/seminar2022/tree/main/midterm/team2">
+            <img src = "https://wsprung.github.io/EDI/assets/creativeCodingOutline-01.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/assets/FortuneDataSummaryPage.ai">
+            <img src = "https://wsprung.github.io/EDI/assets/whitneySFish-01.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/BlinkyBadgeReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/SprungblinkyBadge.png">
+         </a>
+        </td>
+      </tr> -->
+
     </table>
     <main>
       <canvas id="defaultCanvas0" class="p5Canvas" width="885" height="1456" style="width: 885px; height: 1456px; position: absolute"></canvas>
