Changes myWork links and checkBack icon

--- a/website/myWork/index.html
+++ b/website/myWork/index.html
@@ -61,19 +61,21 @@
 
       <tr>
         <td>
-          <a href="https://github.com/tolympia/seminar2022/tree/main/midterm/team2">
+          <!-- create HTML page for this work that has more explanation  -->
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/midtermReflection.html">
             <img src = "https://wsprung.github.io/whitneysArchive/website/myWork/assets/lunchMenuIcon-01.png">
          </a>
         </td>
         <td>
+          <!-- create HTML page for this work that has more explanation  -->
           <a href="https://wsprung.github.io/whitneysArchive/website/assets/FortuneDataSummaryPage.ai">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/myWork/assets/FortuneDataSummaryPage.png">
+            <img src = "https://github.com/Wsprung/fortune500Data">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/BlinkyBadgeReflection.html">
-            <img src = "https://wsprung.github.io/EDI/assets/SprungblinkyBadge.png">
-         </a>
+          <!-- <a href=""> -->
+            <img src = "https://wsprung.github.io/EDI/assets/checkBackIcon.png">
+         <!-- </a> -->
         </td>
       </tr>
 
