Adds articleIcon.png

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -7,5 +7,27 @@
   </head>
   <body>
     <script src="sketch.js"></script>
-  
+  <div id="sketch-container">
+    <table id = "table">
+  <!-- within these tags that we will add information for our table that will allow you to incorporate
+  your projects into your main page  -->
+      <tr> <!--table row -->
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/BoxOutline.png">
+         </a>
+        </td> <!--table data -->
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/TShirtOutline.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/SlotAnimalReflection.html">
+            <img src = "https://wsprung.github.io/EDI/assets/SheepOutline.png">
+         </a>
+        </td>
+      </tr>
+    </table>
+  </div>
 </body></html>
