--- a/website/myWork/index.html
+++ b/website/myWork/index.html
@@ -20,6 +20,7 @@
       </p>
   </div>
     <script src="sketch.js"></script>
+  
     <table id = "table">
   <!-- within these tags that we will add information for our table that will allow you to incorporate
   your projects into your main page  -->
@@ -61,15 +62,13 @@
 
       <tr>
         <td>
-          <!-- create HTML page for this work that has more explanation  -->
           <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/midtermReflection.html">
             <img src = "https://wsprung.github.io/whitneysArchive/website/myWork/assets/lunchMenuIcon-01.png">
          </a>
         </td>
         <td>
-          <!-- create HTML page for this work that has more explanation  -->
-          <a href="https://wsprung.github.io/whitneysArchive/website/assets/FortuneDataSummaryPage.ai">
-            <img src = "https://github.com/Wsprung/fortune500Data">
+          <a href="https://github.com/Wsprung/fortune500Data">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/myWork/assets/FortuneDataSummaryPage.png">
          </a>
         </td>
         <td>
