--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -12,9 +12,9 @@
   <!-- within these tags that we will add information for our table that will allow you to incorporate
   your projects into your main page  -->
       <tr> <!--table row -->
-        <td>
+        <td id = "rowOne">
           <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html">
-            <img src = "https://wsprung.github.io/EDI/assets/BoxOutline.png">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png">
          </a>
         </td> <!--table data -->
         <td>
