--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -11,22 +11,27 @@
     <table id = "table">
   <!-- within these tags that we will add information for our table that will allow you to incorporate
   your projects into your main page  -->
-      <tr> <!--table row -->
-        <td id = "rowOne">
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html">
+      <tr id = "row1"> <!--table row -->
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png">
          </a>
         </td> <!--table data -->
         <td>
           <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html">
-            <img src = "https://wsprung.github.io/EDI/assets/TShirtOutline.png">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/SlotAnimalReflection.html">
-            <img src = "https://wsprung.github.io/EDI/assets/SheepOutline.png">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/SlotAnimalReflection.html" id = "flowerIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/flowersIcon.png">
          </a>
         </td>
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png">
+         </a>
+        </td> <!--table data -->
       </tr>
     </table>
   </div>
