--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -29,9 +29,21 @@
         </td>
         <td>
           <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png">
          </a>
         </td> <!--table data -->
+      </tr>
+      <tr id = "row2">
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "awardIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png">
+         </a>
+        </td>
       </tr>
     </table>
   </div>
