Adds articleIcon3, edits rows in myAccolades

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -35,13 +35,18 @@
       </tr>
       <tr id = "row2">
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "awardIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "awardBadgeIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardBadge.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon2">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "awardIcon2">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png">
          </a>
         </td>
       </tr>
