Works on myAccolades page

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -13,7 +13,8 @@
   your projects into your main page  -->
       <tr id = "row1"> <!--table row -->
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon">
+          <p = "nmsDescript">Hello</p>
+          <a href="https://wsprung.github.io/whitneysArchive/CarilynsCareArticle.pdf" id = "articleIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png">
          </a>
         </td> <!--table data -->
@@ -28,7 +29,7 @@
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIconLight">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png">
          </a>
         </td> <!--table data -->
@@ -46,7 +47,7 @@
         </td>
         <td>
           <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "awardIcon2">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png">
          </a>
         </td>
       </tr>
