Creates hover effect for NMS description

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -9,8 +9,6 @@
     <script src="sketch.js"></script>
   <div id="sketch-container">
     <table id = "table">
-  <!-- within these tags that we will add information for our table that will allow you to incorporate
-  your projects into your main page  -->
       <tr id = "row1"> <!--table row -->
         <td>
           <a href="https://wsprung.github.io/whitneysArchive/CarilynsCareArticle.pdf" id = "articleIcon">
@@ -28,9 +26,10 @@
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIconLight">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png">
-         </a>
+          <!-- <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIconLight"> -->
+         <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png" id = "articleIconLight">
+         <!-- </a> -->
+         <img src = "https://wsprung.github.io/whitneysArchive/website/assets/nmsDescript.png" id = "nmsDescript">
         </td> <!--table data -->
       </tr>
       <tr id = "row2">
