--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -11,8 +11,9 @@
     <table id = "table">
       <tr id = "row1"> <!--table row -->
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/CarilynsCareArticle.pdf" id = "articleIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png">
+          <a href="https://wsprung.github.io/whitneysArchive/CarilynsCareArticle.pdf">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png" id = "articleIcon">
+            <!-- <imc src = "https://wsprung.github.io/whitneysArchive/website/assets/ccDescript.png" id = "ccDescript"> -->
          </a>
         </td> <!--table data -->
         <td>
