Creates hover effect for carolyn's care article

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -13,7 +13,7 @@
         <td>
           <a href="https://wsprung.github.io/whitneysArchive/CarilynsCareArticle.pdf">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png" id = "articleIcon">
-            <!-- <imc src = "https://wsprung.github.io/whitneysArchive/website/assets/ccDescript.png" id = "ccDescript"> -->
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/ccDescript.png" id = "ccDescript">
          </a>
         </td> <!--table data -->
         <td>
