Adds hackathon and SIP icons

--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
        <input type = "button" id = "buttonDesign" onClick="parent.location='myWork/index.html'" value='My Work'>
        <input type = "button" id = "buttonDesign" onClick="parent.location='myMusic/index.html'" value='My Music'>
        <input type = "button" id = "buttonDesign" onClick="parent.location='myFood/index.html'" value='My Food'>
-       <input type = "button" id = "buttonDesign" onClick="parent.location='myAccolades/index.html'" value='My Accolades'>
+       <input type = "button" id = "buttonDesign" onClick="parent.location='myAccolades/index.html'" value='Notable Achievements'>
     </div>
     <div id = "header">
       <h1 id = "archiveHeader">Whitney's Archive</h1>
