--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -48,6 +48,27 @@
           <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "awardIcon2">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png">
          </a>
+         <!-- SIP certificate
+         Web Dev Certificate -->
+        </td>
+      </tr>
+      <tr id = "row3">
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "awardBadgeIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardBadge.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon2">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png">
+         </a>
+        </td>
+        <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "awardIcon2">
+            <img src = "https://www.facebook.com/RHoKJr/photos/a.549715641728977/4162289577138214/?type=3">
+         </a>
+         <!-- SIP certificate
+         Web Dev Certificate -->
         </td>
       </tr>
     </table>
