--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -64,8 +64,8 @@
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "awardIcon2">
-            <img src = "https://www.facebook.com/RHoKJr/photos/a.549715641728977/4162289577138214/?type=3">
+          <a href="https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "awardIcon2">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png">
          </a>
          <!-- SIP certificate
          Web Dev Certificate -->
