--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -22,11 +22,6 @@
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/SlotAnimalReflection.html" id = "flowerIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/flowersIcon.png">
-         </a>
-        </td>
-        <td>
           <!-- <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIconLight"> -->
          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png" id = "articleIconLight">
          <!-- </a> -->
@@ -40,10 +35,15 @@
          </a>
         </td>
         <td>
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/SlotAnimalReflection.html" id = "flowerIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/flowersIcon.png">
+         </a>
+        </td>
+        <!-- <td>
           <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon2">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png">
          </a>
-        </td>
+        </td> -->
         <td>
           <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "awardIcon2">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png">
@@ -54,18 +54,18 @@
       </tr>
       <tr id = "row3">
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "awardBadgeIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardBadge.png">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "sipIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/sipIcon.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon2">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon3">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "awardIcon2">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png">
+          <a href="https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "hackathonIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonIcon.png">
          </a>
          <!-- SIP certificate
          Web Dev Certificate -->
