Fixes table cell spacing

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -17,7 +17,7 @@
          </a>
         </td> <!--table data -->
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html">
+          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "awardIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png">
          </a>
         </td>
