--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -17,7 +17,7 @@
          </a>
         </td> <!--table data -->
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "awardIcon">
+          <a href="" id = "awardIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png">
          </a>
         </td>
@@ -25,17 +25,17 @@
           <!-- <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIconLight"> -->
          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png" id = "articleIconLight">
          <!-- </a> -->
-         <img src = "https://wsprung.github.io/whitneysArchive/website/assets/nmsDescript.png" id = "nmsDescript">
+         <img src = "https://wsprung.github.io/whitneysArchive/website/assets/testScoresDescript.png" id = "testScoresDescript">
         </td> <!--table data -->
       </tr>
       <tr id = "row2">
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "awardBadgeIcon">
+          <a href="" id = "awardBadgeIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardBadge.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/SlotAnimalReflection.html" id = "flowerIcon">
+          <a href="https://www.flowerscleaningteam.net/" id = "flowerIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/flowersIcon.png">
          </a>
         </td>
@@ -45,7 +45,7 @@
          </a>
         </td> -->
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "awardIcon2">
+          <a href="" id = "awardIcon2">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png">
          </a>
          <!-- SIP certificate
@@ -54,17 +54,17 @@
       </tr>
       <tr id = "row3">
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/LogoReflection.html" id = "sipIcon">
+          <a href="https://wsprung.github.io/whitneysArchive/website/assets/sipCertificate.pdf" id = "sipIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/sipIcon.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIcon3">
+          <a href="" id = "articleIcon3">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png">
          </a>
         </td>
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "hackathonIcon">
+          <a href="https://www.facebook.com/RHoKJr/photos/a.549715641728977/4162289577138214/?type=3" id = "hackathonIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonIcon.png">
          </a>
          <!-- SIP certificate
