Adds back button

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -6,11 +6,14 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+  <script src="sketch.js"></script>
+
   <div id="sketch-container">
     <table id = "table">
       <tr id = "row1"> <!--table row -->
         <td>
+          <input type = "button" id = "backButton" onClick="parent.location='../index.html'" value='Back'>
+
           <a href="https://wsprung.github.io/whitneysArchive/CarilynsCareArticle.pdf">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png" id = "articleIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/ccDescript.png" id = "ccDescript">
