Adds page under construction messages

--- a/website/myFood/index.html
+++ b/website/myFood/index.html
@@ -13,6 +13,7 @@
     <!-- https://wsprung.github.io/whitneysArchive/website/assets/christmasFood.JPEG -->
     <p id = "paellaDescript">This is seafood paella. <br> While visiting my uncles in Hudson, I decided to make this dish for them.<br> I normally
       do not love mollusks, I loved this dish. <br> Click to learn more about paella!</p>
+    <p id = "underConstruction">PAGE UNDER <br>CONSTRUCTION</p>
   </div>
 
 </body></html>
