--- a/website/myMusic/index.html
+++ b/website/myMusic/index.html
@@ -6,7 +6,6 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
-  
-
+    <!-- <script src="sketch.js"></script> -->
+    <p id = "underConstruction">PAGE UNDER <br>CONSTRUCTION</p>
 </body></html>
