--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -25,7 +25,7 @@
 
         <p id = p2> I was born in 2004 and have lived in Greenwich my entire life. I look forward to starting college and
           the countless new experiences I will have in the next four years and beyond. I love to travel and meet new people, so nothing
-          is more exciting to me than the prospects of doing so in an academic context. I hope to study abroad to grow my language skills and cultural awareness. <br><br>
+          is more exciting to me than the prospect of doing so in an academic context. I hope to study abroad to grow my language skills and cultural awareness. <br><br>
 
           I also enjoy a lot of familiar things. I love to immerse myself in natures and conversations. I find peace in music. My favorite food is sushi, however,
           I am not the best when it comes to rolling maki. I am better at cooking other foods, with my current favorite food to make being pulled pork. Academic topics
