Edits alzheimersHackathon icon sizes

--- a/website/myAccolades/alzhimersHackathon/alzheimersHackathon.html
+++ b/website/myAccolades/alzhimersHackathon/alzheimersHackathon.html
@@ -11,9 +11,9 @@
   <body>
     <div id = "info">
       <a href = "https://www.facebook.com/RHoKJr/photos/a.549715641728977/4162289577138214/?type=3">
-        <img src = "https://wsprung.github.io/whitneysArchive/website/assets/flowersIcon.png">
+        <img src = "https://wsprung.github.io/whitneysArchive/website/assets/facebookPost.jpg">
       </a>
-      <img src = "https://wsprung.github.io/whitneysArchive/website/assets/Student Event Flyer Clickable.pdf">
+      <img src = "https://wsprung.github.io/whitneysArchive/website/assets/StudentEventFlyer.jpg">
       <a href = "https://rhokjr.org/whats-a-hackathon/">
         <img src = "https://wsprung.github.io/whitneysArchive/website/assets/rhokjrLogo.png">
       </a>
