--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -69,6 +69,7 @@
         <td>
           <a href="https://www.facebook.com/RHoKJr/photos/a.549715641728977/4162289577138214/?type=3" id = "hackathonIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonIcon.png">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonDescriptIcon.png" id = "hackathonDescript">
          </a>
          <!-- SIP certificate
          Web Dev Certificate -->
