Fixes spelling, creates hover for AH icon

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -67,8 +67,8 @@
          </a>
         </td>
         <td>
-          <a href="https://www.facebook.com/RHoKJr/photos/a.549715641728977/4162289577138214/?type=3" id = "hackathonIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonIcon.png">
+          <a href="https://www.facebook.com/RHoKJr/photos/a.549715641728977/4162289577138214/?type=3">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonIcon.png" id = "hackathonIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonDescriptIcon.png" id = "hackathonDescript">
          </a>
          <!-- SIP certificate
