--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -20,8 +20,9 @@
          </a>
         </td> <!--table data -->
         <td>
-          <a href="" id = "awardIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png">
+          <a href="">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonDescriptIcon.png" id = "nmsIcondDescript">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png"  id = "awardIcon">
          </a>
         </td>
         <td>
@@ -67,7 +68,7 @@
          </a>
         </td>
         <td>
-          <a href="https://www.facebook.com/RHoKJr/photos/a.549715641728977/4162289577138214/?type=3">
+          <a href= "https://wsprung.github.io/whitneysArchive/website/myAccolades/alzheimersHackathon/alzheimersHackathon.html">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonIcon.png" id = "hackathonIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonDescriptIcon.png" id = "hackathonDescript">
          </a>
