--- a/website/myAccolades/alzheimersHackathon/alzheimersHackathon.html
+++ b/website/myAccolades/alzheimersHackathon/alzheimersHackathon.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html><html lang="en"><head>
 
   <style>
+    @keyframes borderChange {
+      50% {border-color: rgb(95, 63, 153);}
+    }
     #info {
-      background-color: blue;
+      background-color: purple;
       text-align: center;
       align-content: center;
+    }
+    img {
+      border: 6px solid rgb(22, 227, 167);
+      animation: borderChange 5s infinite;
+    }
+    a:link {
+      display: inline-block;
+      padding: 3px;
+      text-decoration:none !important;
+      color: black;
+      font-size: medium;
+      text-align: center;
+      border-bottom: none;
+    }
+    a:hover {
+      background-color: rgb(22, 227, 167);
     }
   </style>
   </head>
